修复Vercel路由配置，处理根路径404

--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,14 @@
       "destination": "/api/tts/fish-audio.py"
     },
     {
+      "source": "/",
+      "destination": "/dist/index.html"
+    },
+    {
+      "source": "/daodejing",
+      "destination": "/dist/index.html"
+    },
+    {
       "source": "/(.*)",
       "destination": "/dist/$1"
     }
